[package]
name = "videocall-types"
version = "4.0.0"
edition = "2021"
homepage = "https://github.com/security-union/videocall-rs"
repository = "https://github.com/security-union/videocall-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = [
    "Dario Lencina <dario@securityunion.dev>"
]
keywords = ["quic", "webtransport", "zoom", "webrtc"]
categories = ["network-programming", "multimedia"]
description = "types for the videocall streaming platform"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
## Enable test utilities (feature flag overrides). Use in dev-dependencies.
testing = []

[dependencies]
serde_json = "1.0.81"
serde = { version = "1.0.37", features = ["derive"]}
protobuf = "=3.7.1"
yew-websocket = "1.0.1"
