[package]
name = "videocall-ui"
version = "1.0.11"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Yew UI for the videocall project"
homepage = "https://github.com/security-union/videocall-rs"
repository = "https://github.com/security-union/videocall-rs"
keywords = ["quic", "webtransport", "zoom", "webrtc", "yew"]
categories = ["network-programming", "multimedia", "web-programming"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = { workspace = true }
videocall-types = { path= "../videocall-types", version = "1.0.3" }
videocall-client = { path= "../videocall-client", version = "1.1.8" }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
lazy_static = "1.4.0"
log = "0.4.19"
gloo-timers = "0.2.6"
gloo-utils = "0.1"
yew-router = "0.18"
wasm-bindgen-futures = { workspace = true }
enum-display = "0.1.4"
futures = "0.3.31"
web-time = "1.1.0"
regex = "1.10"
js-sys = "0.3.72"

[dependencies.web-sys]
version = "0.3.72"
features = [
    "HtmlDocument",
    "console",
    "Navigator",
    "Storage",
    "Document",
    "Clipboard",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[features]
fake-peers = []

debugAssertions = []

